/*
Overview of what metric is etc..
*/
syntax = "proto3";

/*
Additional overview of what metric is etc..
*/
package istio.mixer.adapter.metricEntry;

import "mixer/adapter/model/v1beta1/extensions.proto";
import "policy/v1beta1/type.proto";

option (istio.mixer.adapter.model.v1beta1.template_variety) = TEMPLATE_VARIETY_REPORT;

/* metric template is ..
   aso it is...
*/
message Template {
    // value is ...
    istio.policy.v1beta1.Value value = 1;
    // dimensions are ...
    map<string, istio.policy.v1beta1.Value> dimensions = 2;

    int64 int64Primitive = 3;

    bool boolPrimitive = 4;

    double doublePrimitive = 5;

    string stringPrimitive = 6;

    istio.policy.v1beta1.Value anotherValueType = 7;

    map<string, int64> dimensionsFixedInt64ValueDType = 8;

    istio.policy.v1beta1.TimeStamp timeStamp = 9;

    istio.policy.v1beta1.Duration duration = 10;

    istio.policy.v1beta1.IPAddress ip_addr = 11;

    istio.policy.v1beta1.DNSName dns_name = 12;

    istio.policy.v1beta1.EmailAddress email_addr = 13;

    istio.policy.v1beta1.Uri uri = 14;

    repeated Resource3 res3_list = 15;
    map<string, istio.mixer.adapter.metricEntry.Resource3> res3_map = 16;
}

message Resource1 {
    string str = 1;
    istio.mixer.adapter.metricEntry.Resource1 self_ref_res1 = 3;
    Resource2 resRef2 = 2;
}

message Resource2 {
    string str = 1;
    Resource3 res3 = 2;
    repeated Resource3 res3_list = 4;
    map<string, Resource3> res3_map = 5;
}

// resource3 comment
message Resource3 {
    // value is ...
    istio.policy.v1beta1.Value value = 1;
    // dimensions are ...
    map<string, istio.policy.v1beta1.Value> dimensions = 2;

    int64 int64Primitive = 3;

    bool boolPrimitive = 4;

    double doublePrimitive = 5;

    string stringPrimitive = 6;

    istio.policy.v1beta1.Value anotherValueType = 7;

    map<string, int64> dimensionsFixedInt64ValueDType = 8;

    istio.policy.v1beta1.TimeStamp timeStamp = 9;

    istio.policy.v1beta1.Duration duration = 10;
}

// Tests
// - Ref template

